# mqt-qecc

./: .cirrus.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .flake8  .gitignore  .gitmodules  .lgmt.yaml  .lgtm.yml  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  bindings_test.py  codenames.txt  codenameslocal.txt  dp-sims.py  main.cpp  noxfile.py  original-rt-02-100k.out  per-0001-01.txt  pers.txt  pyproject.toml  rt-sims.py  setup.py  sitecustomize.py  visualizeDecodingRuntime.py  visualizeWordErrRate.py
apps/: CMakeLists.txt  app.cpp
mqt/qecc/: CMakeLists.txt  __init__.py  bindings.cpp  compile.py  ecc_framework_qiskit_wrapper.py  ecc_qiskit_wrapper.py  ghz02.qasm  py.typed  pyqecc.pyi
mqt/qecc/cc_decoder/: __init__.py  cli.py  color_code.py  decoder.py  hexagonal_color_code.py  plots.py  run.sh  square_octagon_color_code.py  test_square_octagon_color_code.py
mqt/qecc/cc_decoder/comparison/: tn_decoder.py
mqt/qecc/se_synthesis/: Syndrome Extraction Examples.ipynb  __init__.py  quasi_cyclic.py  synthesize.py
src/: CMakeLists.txt  Decoder.cpp  DecodingSimulator.cpp  GF2.cpp  ImprovedUF.cpp  ImprovedUFD.cpp  OriginalUFD.cpp  UFDecoder.cpp  UFHeuristic.cpp  Utils.cpp
src/ecc/: CMakeLists.txt  Ecc.cpp  Q18Surface.cpp  Q3Shor.cpp  Q5Laflamme.cpp  Q7Steane.cpp  Q9Shor.cpp  Q9Surface.cpp
src/mqt/qecc/: __init__.py  _version.pyi  code.py  codes.py  ecc_qiskit_wrapper.py  pyqecc.pyi
src/mqt/qecc/analog-information-decoding/: README.md  __init__.py  setup.py
src/mqt/qecc/analog-information-decoding/code_construction/: code_constructor.py  sparse_code_constructor.py
src/mqt/qecc/analog-information-decoding/results/: raw-data-reference.txt
src/mqt/qecc/analog-information-decoding/simulators/: analog_tannergraph_decoding.py  memory_experiment_v2.py  quasi_single_shot_v2.py  simulation.py
src/mqt/qecc/analog-information-decoding/test/: test_memory_experiment.py  test_simulation_utils.py
src/mqt/qecc/analog-information-decoding/utils/: __init__.py  data_utils.py  simulation_utils.py
src/mqt/qecc/analog_information_decoding/: .gitignore  LICENSE  __init__.py
src/mqt/qecc/analog_information_decoding/code_construction/: __init__.py  code_constructor.py  compute_distances.sh  compute_distances_3D.sh  sparse_code_constructor.py
src/mqt/qecc/analog_information_decoding/simulators/: __init__.py  analog_tannergraph_decoding.py  memory_experiment_v2.py  quasi_single_shot_v2.py  simulation.py
src/mqt/qecc/analog_information_decoding/test/: test_memory_experiment.py  test_simulation_utils.py
src/mqt/qecc/analog_information_decoding/utils/: __init__.py  data_utils.py  simulation_utils.py
src/mqt/qecc/cc_decoder/: __init__.py  cli.py  color_code.py  decoder.py  hexagonal_color_code.py  plots.py  run.sh  run_color_code_phenomenological_noise.py  square_octagon_color_code.py
src/mqt/qecc/cc_decoder/comparison/: tn_decoder.py
src/mqt/qecc/cc_decoder/plotting/: plot_convergence_rate.ipynb  plot_pseudothresholds.ipynb  plots.py
src/mqt/qecc/cc_decoder/stim_interface/: __init__.py  color_code_stim.py  dem_to_matrices.py  max_sat_sinter_decoder.py  max_sat_stim_decoder.py
src/mqt/qecc/circuit_synthesis/: Encoding Circuits.ipynb  Encoding_Circuits_Example.ipynb  __init__.py  cat_states.py  circuit_utils.py  circuits.py  encoding.py  measurement_free.py  noise.py  permutation_st.py  simulation.py  simulation_det.py  state_prep.py  state_prep_det.py  syndrome_extraction.py  synthesis_utils.py  zx.py
src/mqt/qecc/circuit_synthesis/encoding_circuits/: 10_1_2.qasm  16_6_4.qasm  4_2_2.qasm  5_1_3.qasm  6_2_2.qasm  6_4_2.qasm  8_3_2.qasm  8_3_3_gottesmann.qasm  carbon.qasm  hamming.qasm  shor.qasm  steane.qasm  surface.qasm  tetrahedral.qasm
src/mqt/qecc/circuit_synthesis/examples/: Encoding_Circuit.ipynb  Non_CSS_Ancillas.ipynb
src/mqt/qecc/circuit_synthesis/ft_stateprep/: simulation.py  state_prep.py
src/mqt/qecc/circuit_synthesis/non_css_ancillas/: five_qubit_code.qasm  five_qubit_code_verified.qasm  gottesman_8_3_3.qasm  gottesman_8_3_3_verified.qasm
src/mqt/qecc/co3/: __init__.py
src/mqt/qecc/codes/: __init__.py  bb_codes.py  color_code.py  concatenation.py  constructions.py  css_code.py  hamming.py  hexagonal_color_code.py  pauli.py  quasi_cyclic.py  square_octagon_color_code.py  stabilizer_code.py  symplectic.py
src/mqt/qecc/ft_stateprep/: __init__.py  code.py  permutation_st.py  simulation.py  simulation_det.py  state_prep.py  state_prep_det.py
src/mqt/qecc/se_synthesis/: Syndrome Extraction Examples.ipynb  __init__.py  quasi_cyclic.py  synthesize.py
src/python/: CMakeLists.txt  bindings.cpp
test/: CMakeLists.txt  app.cpp  test_decoding_simulation.cpp  test_ecc_functionality.cpp  test_improvedUfd.cpp  test_originalUfd.cpp  test_simulator.cpp  test_treenode.cpp  test_ufdheuristic.cpp  test_unionfind.cpp  test_utils.cpp
test/python/: ExampleCircuit.qasm  __init__.py  constraints.txt  ecc_framework_tests.py  test_cc_decoder.py  test_code.py  test_ecc_framework.py  test_simple.py  test_square_octagon_color_code.py  test_utils.py
test/python/analog_info/: __init__.py  results  test_analog_tannergraph_decoding.py  test_memory_experiment.py  test_qss.py  test_simulation_utils.py  test_ss_simulation.py
test/python/cc_decoder/: __init__.py  max_sat_sinter_decoder.py  test_cc_decoder.py  test_color_code_stim.py  test_dem_to_matrices.py  test_max_sat_sinter_decoder.py  test_max_sat_stim_decoder.py  test_square_octagon_color_code.py  test_utils.py
test/python/circuit_synthesis/: __init__.py  test_cat_states.py  test_circuits.py  test_deterministic.py  test_encoder_synthesis.py  test_gaussian_elimination.py  test_simulation.py  test_stateprep.py  test_utils.py  utils.py
test/python/co3/: __init__.py  test_hill_climber.py  test_lattice_router.py  test_snake_builder.py
test/python/ecc_fw/: __init__.py  test_ecc_framework.py
test/python/ft_stateprep/: test_deterministic.py  test_simulation.py  test_stateprep.py
test/python/uf_decoder/: __init__.py  test_simple.py
(+444 files in other folders)
