[build-system]
requires = [
  "scikit-build-core>=0.10.1",
  "setuptools-scm>=8.1",
  "pybind11>=2.13.5",
]
build-backend = "scikit_build_core.build"

[project]
name = "mqt.qecc"
description = "QECC - An MQT Tool for Quantum Error Correcting Codes"
readme = "README.md"
authors = [
    { name = "Lucas Berent", email = "lucas.berent@tum.de" },
    { name = "Lukas Burgholzer", email = "lukas.burgholzer@tum.de" },
    { name = "Peter-Jan H.S. Derks", email = "peter-janderks@hotmail.com" },
    { name = "Timo Hillmann", email = "timo.hillmann@rwth-aachen.de"},
    { name = "Tom Peham", email = "tom.peham@tum.de" },
    { name = "Ludwig Schmid", email = "ludwig.s.schmid@tum.de" },
]
keywords = ["MQT", "quantum-computing", "error-correction", "MaxSAT", "QLDPC"]
license = { file = "LICENSE" }

classifiers = [
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "z3-solver>=4.12",
    "z3-solver<4.13; sys_platform == 'darwin' and 'x86_64' in platform_machine", # z3 4.13 wheels on x86 macOS are broken
    "qecsim",
    "ldpc>=0.1.53",
    "numpy>=1.26; python_version > '3.11'",
    "numpy>=1.24; python_version <= '3.11'",
    "qiskit[qasm3-import]>=1.0.0",
    "qiskit-aer>=0.15.0",
    "stim >= 1.13.0",
    "multiprocess >= 0.70.16",
    "bposd>=1.6",
    "numba>=0.59; python_version > '3.11'",
    "numba>=0.57; python_version <= '3.11'",
    "pymatching>=2.2.1",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.2", "pytest-console-scripts>=1.4", "pytest-mock>=3.7"]
coverage = ["mqt.qecc[test]", "pytest-cov>=4"]
docs = [
    "furo>=2023.9.10",
    "setuptools-scm>=8.1",
    "sphinxcontrib-bibtex>=2.4.2",
    "sphinx-copybutton>=0.5",
    "ipykernel",
    "nbsphinx",
    "sphinxext-opengraph>=0.9",
    "sphinx-autodoc-typehints",
    "qiskit[visualization]",
]
visualization = ["matplotlib", "scipy"]
dev = ["mqt.qecc[coverage, docs, visualization]"]

[project.scripts]
"ecc_qiskit_wrapper" = "mqt.qecc.ecc_qiskit_wrapper:main"
"mqt.qecc.cc-decoder" = "mqt.qecc.cc_decoder.cli:cli"
"mqt.qecc.cc-decoder-plot" = "mqt.qecc.cc_decoder.plots:main"

[project.urls]
Homepage = "https://github.com/cda-tum/mqt-qecc"
Documentation = "https://mqt.readthedocs.io/projects/qecc"
Issues = "https://github.com/cda-tum/mqt-qecc/issues"
Discussions = "https://github.com/cda-tum/mqt-qecc/discussions"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Set the wheel install directory
wheel.install-dir = "mqt/qecc"

# Set required Ninja version
ninja.version = ">=1.10"

# Setuptools-style build caching in a local directory
build-dir = "build/{build_type}"

# Explicitly set the package directory
wheel.packages = ["src/mqt"]

# Only build the Python bindings target
build.targets = ["pyqecc"]

# Only install the Python package component
install.components = ["mqt-qecc_Python"]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/mqt/qecc/_version.py"]
sdist.exclude = [
    "**/.github",
    "**/doc",
    "**/docs",
    "**/meta",
    "**/plots",
    "**/test",
    "**/tests",
]

[tool.scikit-build.cmake.define]
BUILD_MQT_QECC_TESTS = "OFF"
BUILD_MQT_QECC_BINDINGS = "ON"
ENABLE_IPO = "ON"

[[tool.scikit-build.overrides]]
if.python-version = ">=3.13"
if.abi-flags = "t"
if.platform-system = "win32"
inherit.cmake.define = "append"
cmake.define.DISABLE_GIL = "1"


[tool.check-sdist]
sdist-only = ["src/mqt/qecc/_version.py"]
git-only = [
    "docs/*",
    "examples/*",
    "test/*",
    ".idea/*",
]


[tool.setuptools_scm]
write_to = "src/mqt/qecc/_version.py"

[tool.pytest.ini_options]
minversion = "7.2"
testpaths = ["test/python"]
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:.*pkg_resources.*:DeprecationWarning:",
    "ignore:.*The retworkx package is deprecated*:DeprecationWarning:pymatching",
    'ignore:.*qiskit.providers.provider.Provider.*:DeprecationWarning:',
]

[tool.coverage]
run.source = ["mqt.qecc"]
report.exclude_also = [
    '\.\.\.',
    'if TYPE_CHECKING:',
    'raise AssertionError',
    'raise NotImplementedError',
]

[tool.mypy]
files = ["src/mqt", "test/python", "noxfile.py"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/src"]
python_version = "3.9"
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true
exclude = [
    "code_construction*",
    "^data_utils\\.py$"
]

[[tool.mypy.overrides]]
module = ["qiskit.*", "qecsim.*", "qiskit_aer.*", "matplotlib.*", "scipy.*", "ldpc.*", "pytest_console_scripts.*",
    "z3.*", "bposd.*", "numba.*", "pymatching.*", "stim.*", "multiprocess.*"]
ignore_missing_imports = true


[tool.check-wheel-contents]
ignore = ["W002"]  # Triggers on __init__.py's and duplicate data files


[tool.ruff]
line-length = 120
namespace-packages = ["mqt"]
preview = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = [
    "A",           # flake8-builtins
    "ANN",         # flake8-annotations
    "ARG",         # flake8-unused-arguments
    "ASYNC",       # flake8-async
    "B",  "B904",  # flake8-bugbear
    "C4",          # flake8-comprehensions
    "D",           # pydocstyle
    "EM",          # flake8-errmsg
    "EXE",         # flake8-executable
    "FA",          # flake8-future-annotations
    "FLY",         # flynt
    "FURB",        # refurb
    "I",           # isort
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "LOG",         # flake8-logging-format
    "N",           # flake8-naming
    "NPY",         # numpy
    "PERF",        # perflint
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "PYI",         # flake8-pyi
    "Q",           # flake8-quotes
    "RET",         # flake8-return
    "RSE",         # flake8-raise
    "RUF",         # Ruff-specific
    "S",           # flake8-bandit
    "SLF",         # flake8-self
    "SLOT",        # flake8-slots
    "SIM",         # flake8-simplify
    "T20",         # flake8-print
    "TCH",         # flake8-type-checking
    "TID251",      # flake8-tidy-imports.banned-api
    "TRY",         # tryceratops
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "ISC001",  # Conflicts with formatter
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import should be at top of file
    "PT004",   # Incorrect, just usefixtures instead.
    "S101",    # Use of assert detected
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Callable".msg = "Use collections.abc.Callable instead."
"typing.Iterator".msg = "Use collections.abc.Iterator instead."
"typing.Mapping".msg = "Use collections.abc.Mapping instead."
"typing.Sequence".msg = "Use collections.abc.Sequence instead."
"typing.Set".msg = "Use collections.abc.Set instead."

[tool.ruff.lint.per-file-ignores]
"test/python/**" = ["T20", "ANN"]
"docs/**" = ["T20"]
"noxfile.py" = ["T20", "TID251"]
"*.pyi" = ["D"]  # pydocstyle
"*.ipynb" = [
    "D",    # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]
"*/cc_decoder/plots.py" = ["T201"]
"scripts/*" = ["T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.typos]
[tool.typos.default.extend-words]
wille = "wille"
ser = "ser"
aer = "aer"
anc = "anc"


[tool.repo-review]
ignore = ["GH200"]


[tool.cibuildwheel]
build = "cp3*"
skip = "*-musllinux*"
archs = "auto64"
test-command = "python -c \"from mqt import qecc\""
test-skip = ["cp313*"] # skip testing on Python 3.13 until our dependencies are ready
build-frontend = "build[uv]"
free-threaded-support = true
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
environment = { DEPLOY = "ON" }

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
before-build = "uv pip install delvewheel>=1.7.3"
repair-wheel-command = "delvewheel repair -v -w {dest_dir} {wheel} --namespace-pkg mqt"
environment = { CMAKE_ARGS = "-T ClangCL", SKBUILD_CMAKE_ARGS="--fresh" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }


[tool.uv]
reinstall-package = ["mqt.qecc"]
